Table products as P {
  id int [pk, not null, increment]
  name varchar [not null]
  image varchar [not null]
  category varchar [not null]
  description text
  rating int [not null]
  num_reviews int [not null, default: 0]
  price decimal(10,2) [not null]
  count_in_stock int [not null]
  created_at datetime [default: `now()`]
  updated_at datetime
}

Table orders as O {
  id int [pk, not null, increment]
  payment_method varchar [not null]
  tax_price decimal(10,2) [not null]
  shipping_price decimal(10,2) [not null]
  total_price decimal(10,2) [not null]
  created_at datetime [default: `now()`]
  updated_at datetime
}

Table order_items as I {
  id int [pk, not null, increment]
  order_id int [not null, ref: > O.id]
  product_id int [not null, ref: - P.id]
  name varchar [not null]
  quantity int [not null]
  image varchar [not null]
  price int [not null]
}